# gb_emulator

./: .gitignore  README.md  add_cb_part2.py  add_res_instructions.py  analyze_cpu.py  analyze_instruction_cycles.py  benchmark.sh  claude.md  debug_findings_02_interrupts.md  generate_cb_instructions.py  generate_set_instructions.py  implementation_plan.py  launch_macos.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  run_mooneye_tests.sh  run_quick_tests.sh  setup.py  test_performance.sh  高速化計画.md
docs/: 02-interrupts.gb_timer_compatibility_plan.md  互換性向上計画.md
docs/completed/: TODO_DEBUG.md  TODO_IMPROVE.md  timer_synchronization_issue.md  タイミング問題.md  タイミング結果調査内容.md
docs/investigation/: FINAL_MEM_TIMING_REPORT.md  MEM_TIMING_STATUS_REPORT.md  PHASE2_FINAL_REPORT.md  PYBOY_DETAILED_ANALYSIS.md  PYBOY_PERFORMANCE_ANALYSIS.md  consultation_8_memo.md  final_consultation_memo.md  mem_timing_issue_investigation.md
scripts/analysis/: boot_rom_analysis.py  font_analysis.py
scripts/testing/: mooneye_test_runner.py
src/gameboy/: apu.py  cpu.py  cpu_backup_20250803_125203.py  cpu_backup_microcode_simplification.py  cpu_refactored.py  emulator.py  memory.py  post_boot_init.py  ppu.py  serial.py  timer.py
tests/: __init__.py  conftest.py
